@@ -1,4 +1,7 @@
 2010-13-06  Luis de Bethencourt  <luis@debethencourt.com>
+	* Dilate effect added.
+
+2010-13-06  Luis de Bethencourt  <luis@debethencourt.com>
 	* Solarize effect added.
 
 2010-13-06  Luis de Bethencourt  <luis@debethencourt.com>
